[project]
name = "bpayd-integration-guides"
version = "1.0.0"
description = "Developer guides for Bpayd payment integration services"
readme = "readme.md"
requires-python = ">=3.12"

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.15",
]

[dependency-groups]
dev = ["mkdocs-material[imaging]>=9.6.14", "ruff>=0.11.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
